--- a/task_manager/templates/task_manager/base.html
+++ b/task_manager/templates/task_manager/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -11,8 +12,8 @@
         <h1>Gestor de Tareas</h1>
         <nav>
             <ul>
-                <li><a href="{% url 'task_list' %}">Lista de Tareas</a></li>
-                <li><a href="{% url 'create_task' %}">Crear Tarea</a></li>
+                <li><a href="{% url 'task_manager:task_list' %}">Lista de Tareas</a></li>
+                <li><a href="{% url 'task_manager:create_task' %}">Crear Tarea</a></li>
             </ul>
         </nav>
     </header>
