--- a/task_manager/templates/task_manager/task_form.html
+++ b/task_manager/templates/task_manager/task_form.html
@@ -1,20 +1,14 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Formulario de Tarea{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'task_manager/css/style.css' %}">
-</head>
-<body>
-    {% block content %}
-    <h1>{% if task %}Editar Tarea{% else %}Crear Tarea{% endif %}</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">{% if task %}Actualizar{% else %}Crear{% endif %}</button>
-    </form>
-    <a href="{% url 'task_list' %}">Volver a la lista de tareas</a>
-    {% endblock %}
-</body>
-</html>
+{% extends 'task_manager/base.html' %}
+
+<title>{% block title %}Formulario de Tarea{% endblock %}</title>
+{% load static %}
+
+{% block content %}
+<h1>{% if task %}Editar Tarea{% else %}Crear Tarea{% endif %}</h1>
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">{% if task %}Actualizar{% else %}Crear{% endif %}</button>
+</form>
+<a href="{% url 'task_manager:task_list' %}">Volver a la lista de tareas</a>
+{% endblock %}
