--- a/task_manager/templates/task_manager/task_confirm_delete.html
+++ b/task_manager/templates/task_manager/task_confirm_delete.html
@@ -1,12 +1,19 @@
+{% extends 'task_manager/base.html' %}
 {% load static %}
-<body>
-    <div class="container">
-        <h1>Confirmar Eliminación</h1>
-        <p>¿Estás seguro de que deseas eliminar la tarea "{{ task.title }}"?</p>
+
+{% block title %}Confirmar Eliminación{% endblock %}
+
+{% block content %}
+<div class="container">
+    <h1>Confirmar Eliminación</h1>
+    <p>¿Estás seguro de que deseas eliminar la tarea "{{ task.title }}"?</p>
+    
+    <div class="action-buttons">
         <form method="POST">
             {% csrf_token %}
-            <button type="submit">Eliminar</button>
-            <a href="{% url 'task_manager:task_list' %}">Cancelar</a>
+            <button type="submit" class="btn-delete">Eliminar</button>
         </form>
+        <a href="{% url 'task_manager:task_list' %}" class="btn">Cancelar</a>
     </div>
-</body>
+</div>
+{% endblock %}
